src/FinancialForce Accounting/objects/AccountingSummarization2__c.object
<CustomObject>
    <description>An internal object that stores data generated by the summarization process.</description>
    <fields>
        <fullName>AccountCurrencyCodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Currency Code ID</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_AccCode</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountCurrencyCodeName__c</fullName>
        <label>Account Currency Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOutstandingTotal__c</fullName>
        <label>Transaction Account Outstanding Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountOutstandingValue__c</fullName>
        <label>Transaction Line Account Outstanding Val</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountTotal__c</fullName>
        <label>Transaction Account Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountType__c</fullName>
        <label>Transaction Line Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountValue__c</fullName>
        <label>Transaction Line Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AccountingCurrencyID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accounting Currency ID</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_Acc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccountingCurrencyName__c</fullName>
        <label>Accounting Currency Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AgedBand01Count__c</fullName>
        <label>Aged Band 01 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgedBand01__c</fullName>
        <label>Aged Band 01</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgedBand02Count__c</fullName>
        <label>Aged Band 02 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgedBand02__c</fullName>
        <label>Aged Band 02</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgedBand03Count__c</fullName>
        <label>Aged Band 03 Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AgedBand03__c</fullName>
        <label>Aged Band 03</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankAccountValue__c</fullName>
        <label>Transaction Line Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BankReconciliationStatus__c</fullName>
        <label>Transaction Line Bank Rec Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CashEntryID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry ID</label>
        <referenceTo>codaCashEntry__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CashEntryName__c</fullName>
        <label>Cash Entry Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DaysOverdue__c</fullName>
        <label>Transaction Line Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension1ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1 ID</label>
        <referenceTo>codaDimension1__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension1Name__c</fullName>
        <label>Dimension 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension1Value__c</fullName>
        <label>Transaction Line Dimension 1 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension2ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2 ID</label>
        <referenceTo>codaDimension2__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension2Name__c</fullName>
        <label>Dimension 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension2Value__c</fullName>
        <label>Transaction Line Dimension 2 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dimension3ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3 ID</label>
        <referenceTo>codaDimension3__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension3Name__c</fullName>
        <label>Dimension 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dimension3Value__c</fullName>
        <label>Transaction Line Dimension 3 Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentCurrencyCodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Document Currency Code ID</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_Doc</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DocumentCurrencyCodeName__c</fullName>
        <label>Document Currency Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentOutstandingTotal__c</fullName>
        <label>Transaction Document Outstanding Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentOutstandingValue__c</fullName>
        <label>Transaction Line Doc Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentReference2__c</fullName>
        <label>Transaction Document Reference 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentReference__c</fullName>
        <label>Transaction Document Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocumentTaxTotal__c</fullName>
        <label>Transaction Line Document Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentTotal__c</fullName>
        <label>Transaction Document Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DocumentValue__c</fullName>
        <label>Transaction Line Document Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualCurrencyCodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dual Currency Code ID</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_Dual</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DualCurrencyCodeName__c</fullName>
        <label>Dual Currency Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DualOutstandingValue__c</fullName>
        <label>Transaction Line Dual Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualValueTotal__c</fullName>
        <label>Transaction Dual Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DualValue__c</fullName>
        <label>Transaction Line Dual Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DueDate__c</fullName>
        <label>Transaction Line Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccountID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Ledger Account ID</label>
        <referenceTo>codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccountName__c</fullName>
        <label>General Ledger Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeneralLedgerAccountValue__c</fullName>
        <label>Transaction Line GLA Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeCurrencyCodeID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Home Currency Code ID</label>
        <referenceTo>codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2_Home</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HomeCurrencyCodeName__c</fullName>
        <label>Home Currency Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HomeOutstandingValue__c</fullName>
        <label>Transaction Line Home Outstanding Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeValueTotal__c</fullName>
        <label>Transaction Home Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HomeValue__c</fullName>
        <label>Transaction Line Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JournalID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Journal ID</label>
        <referenceTo>codaJournal__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JournalName__c</fullName>
        <label>Journal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LineReference__c</fullName>
        <label>Transaction Line Reference</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LineType__c</fullName>
        <label>Line Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analysis</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Account</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MatchType__c</fullName>
        <label>Transaction Match Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MatchingStatus__c</fullName>
        <label>Matching Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Available</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Matched</fullName>
                </value>
                <value>
                    <fullName>Not Matchable</fullName>
                </value>
                <value>
                    <fullName>Proposed</fullName>
                </value>
                <value>
                    <fullName>Proposed Void</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OnHold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transaction Line On Hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OwnerCompanyID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner Company ID</label>
        <referenceTo>codaCompany__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OwnerCompanyName__c</fullName>
        <label>Owner Company Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayableCreditNoteID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Credit Note ID</label>
        <referenceTo>codaPurchaseCreditNote__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayableCreditNoteName__c</fullName>
        <label>Payable Credit Note Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PayableInvoiceID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payable Invoice ID</label>
        <referenceTo>codaPurchaseInvoice__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PayableInvoiceName__c</fullName>
        <label>Payable Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeriodID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Period ID</label>
        <referenceTo>codaPeriod__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PeriodName__c</fullName>
        <label>Period Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product ID</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RowCount__c</fullName>
        <label>Row Count</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RunInstance__c</fullName>
        <label>Run Instance</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SalesCreditNoteID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Credit Note ID</label>
        <referenceTo>codaCreditNote__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesCreditNoteName__c</fullName>
        <label>Sales Credit Note Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SalesInvoiceID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Invoice ID</label>
        <referenceTo>codaInvoice__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SalesInvoiceName__c</fullName>
        <label>Sales Invoice Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SummarizationTemplateID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Summarization Template ID</label>
        <referenceTo>ffr__SummarizationTemplate__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SummarizationTemplateName__c</fullName>
        <label>Summarization Template Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxGroup__c</fullName>
        <label>Transaction Line Items Tax Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionDate__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TransactionID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction ID</label>
        <referenceTo>codaTransaction__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionLineCreatedDate__c</fullName>
        <label>Transaction Line Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TransactionLineItemID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction Line Item ID</label>
        <referenceTo>codaTransactionLineItem__c</referenceTo>
        <relationshipLabel>Accounting Summarizations 2</relationshipLabel>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TransactionLineItemName__c</fullName>
        <label>Transaction Line Item Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionName__c</fullName>
        <label>Transaction Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransactionType__c</fullName>
        <label>Transaction Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User ID</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounting_Summarizations_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserName__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VendorDocumentNumber__c</fullName>
        <label>Transaction Vendor Document Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Transaction Years</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Accounting Summarization</label>
    <nameField>
        <displayFormat>AS-{000000}</displayFormat>
        <label>Accounting Summarization Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Accounting Summarizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>